--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 asgiref==3.8.1
-Django==5.0.6
-gunicorn==22.0.0
-psycopg2==2.9.9
-sqlparse==0.5.0
-whitenoise==6.7.0
+dj-database-url==2.3.0
+Django==5.1.6
+gunicorn==23.0.0
+packaging==24.2
+psycopg==3.2.5
+psycopg-binary==3.2.5
+psycopg-pool==3.2.6
+sqlparse==0.5.3
+typing_extensions==4.12.2
+whitenoise==6.9.0
